testsuite/tests/package/package06e.hs
module Package06e where
import GHC.IR.Haskell.Type
import GHC.Entity.Unique.FiniteMap
